agentgateway/temp_policy.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"agentgateway.dev/v1alpha1","kind":"AgentgatewayPolicy","metadata":{"annotations":{"meta.helm.sh/release-name":"codeinspector","meta.helm.sh/release-namespace":"default"},"creationTimestamp":"2026-04-22T13:23:22Z","generation":18,"labels":{"app.kubernetes.io/managed-by":"Helm"},"name":"apikey-auth","namespace":"agentgateway-system","resourceVersion":"518310","uid":"3d8ec626-a9ba-45f9-aed3-67c8edd8c50b"},"spec":{"targetRefs":[{"group":"gateway.networking.k8s.io","kind":"HTTPRo [...]
    meta.helm.sh/release-name: codeinspector
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2026-04-22T13:23:22Z"
  generation: 19
  labels:
    app.kubernetes.io/managed-by: Helm
  name: apikey-auth
  namespace: agentgateway-system
  resourceVersion: "530930"
  uid: 3d8ec626-a9ba-45f9-aed3-67c8edd8c50b
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: agentgateway-api-route
  traffic:
    jwtAuthentication:
      mode: Permissive
      providers:
      - audiences:
        - code-inspector-api
        issuer: code-inspector
        jwks:
          inline: |
            {"keys": [{"kty": "RSA", "use": "sig", "kid": "code-inspector-key-01", "alg": "RS256", "n": "7eXFpr2rANKszQYSKd-bDRy1-M0tsatbwpr0BGkMOsZMHRph3bv9kLB0TuyLJ09VXDdmUpiYLGd6oQr3iKhtk3oe1_-p6aS7JKTZ-YCQW7TPRQget7lxWZj9l9a-E1WM-JSBjc7tXsGsKjVS9eDC-18gKbS4SnZhxhYwf08flLYa1nHhxuaUbxe7YNzqB6VMIAzt4iyC0LS3cm_CCI8hNg5RjbFkZXE_IC0rdRScLotfWOX2rgSdEH83hA41C8Nx0WICnQ6HysrBIxTfiUiQD4ieKb6HlK4Tr25hUhW_rcshhvcGyBAzQKYtadd51kADr4a0G09U95zby4pCasN-0w", "e": "AQAB"}]}
      - audiences:
        - https://code-inspector-api
        issuer: https://dev-axwc0ui527kw0c5d.us.auth0.com/
        jwks:
          inline: '{"keys":[{"alg":"RS256","kty":"RSA","use":"sig","n":"u3KdUumTlNhdys7_bBPMq4BTEtkdQuS8_VPrE9IytsSgR7kZ1pMmtEQ_CxznF87nj0DvnCvZgBWN5Vi15BPW4Vaf-jcH1ndOjTDElTAtXAHkB8SEsSFYZAKyUQDKDRdoBHXuUpxB6p0zIEpztgkQpJnnMbhtuPa7NQitSCWjyLzpaaEQVTt-bBw860ZvRAEBqLs2nf4Aeacj8VwM8HW5jl10mLx46CgLHIsWsmBj0WFDnQstTNr76VelEVQl7-l18nZCi-KMDFdJBSCJvqSrWEWJzIgGn-L8vYBn-CCel9vJVidRzAlZK59AUCUrLlBdEYMnz86z9dzVfOQKW4eM5w","e":"AQAB","kid":"axC0qAwREjLm_QvUFSxjv"},{"alg":"RS256","kty":"RSA","use":"sig","n" [...]
    {}
